--- a/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/index.html
+++ b/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/index.html
@@ -10,21 +10,21 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>View movies</h2>
+        <h2>Select Movies</h2>
         <p>
             View a list of the movies we have available for rent.
         </p>
         <p><a class="btn btn-default" href="{{ url_for('movies') }}">Movies</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Rent a Movie</h2>
-        <p>Have a movie in mind head straight to our rental page and select your rental.</p>
-        <p><a class="btn btn-default" href="{{ url_for('rent') }}">Rent</a></p>
-    </div>
-    <div class="col-md-4">
         <h2>Return</h2>
         <p>Need to complete a return? Head straight to our return page.</p>
         <p><a class="btn btn-default" href="{{ url_for('returns') }}">Return</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Checkout</h2>
+        <p>Selected all your movies already and need to checkout head straight here.</p>
+        <p><a class="btn btn-default" href="{{ url_for('checkout') }}">Checkout</a></p>
     </div>
 </div>
 
