--- a/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/login.html
+++ b/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/login.html
@@ -1,10 +1,29 @@
 ﻿{% extends "layout.html" %}
 
+<!--TODO center the boxes make button smaller and make it work-->
 {% block content %}
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
+</head>
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>{{ message }}</h2>
 
-<p>Use this area to provide additional information.</p>
+<form class="form-signin">
+    <h3 class="h3 mb-3 font-weight-normal">Please sign in</h3>
+    <label for="inputUsername" class="sr-only">Username</label>
+    <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" value="remember-me"> Remember me
+        </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+</form>
 
 {% endblock %}
