--- a/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/checkout.html
+++ b/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/checkout.html
@@ -21,6 +21,8 @@
     <div class="container">
         <div class="py-5 text-center">
             <h2>{{title}}</h2>
+            <h3>{{cartSize}}</h3>
+            <h3>{{selectedMovie}}</h3>
             <p class="lead">{{message}}</p>
     </div>
          <div class="row">
@@ -30,15 +32,17 @@
                             <!--<span class="badge badge-secondary badge-pill"></span>-->
                         </h4>
                         <ul class="list-group mb-3">
-                            <li class="list-group-item d-flex justify-content-between lh-condensed">
-                                <!--<div>
-                                    <h6 class="my-0">Product name</h6>
-                                    <small class="text-muted">Brief description</small>
-                                </div>
-                                <span class="text-muted">$12</span>
+                            {% for item in cart %}
+                            <li>
+                                <h6>{{item.movie.title}}</h6>
+                                <span>{{item.Format}} ${{item.rate}}</span>
                             </li>
-                            <li class="list-group-item d-flex justify-content-between lh-condensed">
-                                <div>
+                            {% endfor %}
+                            <!--<li class="list-group-item d-flex justify-content-between lh-condensed">-->
+                                
+                            <!--</li>-->
+                            <!--<li class="list-group-item d-flex justify-content-between lh-condensed">
+                                <div>-
                                     <h6 class="my-0">Second product</h6>
                                     <small class="text-muted">Brief description</small>
                                 </div>
@@ -61,7 +65,7 @@
                             <li class="list-group-item d-flex justify-content-between">
                                 <span>Total (USD)</span>
                                 <strong>$20</strong>
-                            </li>-->
+                            </li>--><!---->
                         </ul>
                         <form class="card p-2">
                             <div class="input-group">
