--- a/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/checkout.html
+++ b/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/checkout.html
@@ -21,24 +21,24 @@
     <div class="container">
         <div class="py-5 text-center">
             <h2>{{title}}</h2>
-            <h3>{{cartSize}}</h3>
-            <h3>{{selectedMovie}}</h3>
             <p class="lead">{{message}}</p>
     </div>
          <div class="row">
                     <div class="col-md-4 order-md-2 mb-4">
                         <h4 class="d-flex justify-content-between align-items-center mb-3">
                             <span class="text-muted">Your cart</span>
-                            <!--<span class="badge badge-secondary badge-pill"></span>-->
+                            <span class="badge badge-secondary badge-pill">{{cartSize}}</span>
                         </h4>
                         <ul class="list-group mb-3">
                             {% for item in cart %}
-                            <li>
-                                <h6>{{item.movie.title}}</h6>
-                                <span>{{item.Format}} ${{item.rate}}</span>
+                            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                                <div>
+                                    <h6 class="my-0">Movie: {{item.movie.title}}</h6>
+                                </div>
+                                <span class="text-muted"><h6 class="my-0">Format: {{item.Format}} Price: ${{item.rate}}</h6></span>
                             </li>
                             {% endfor %}
-                            <!--<li class="list-group-item d-flex justify-content-between lh-condensed">-->
+                            <!---->
                                 
                             <!--</li>-->
                             <!--<li class="list-group-item d-flex justify-content-between lh-condensed">
