--- a/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/about.html
+++ b/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/about.html
@@ -14,7 +14,7 @@
     </div>
     {% endfor %}
     <div class="row">
-        <form action="." method="POST">
+        <form action="/about" method="POST">
             <textarea class="form-control" name="contents" placeholder="Enter a comment"></textarea>
             <input type="submit" class="btn btn-sucess" value="Post comment">
         </form>
