--- a/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/checkout.html
+++ b/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/checkout.html
@@ -27,7 +27,7 @@
                     <div class="col-md-4 order-md-2 mb-4">
                         <h4 class="d-flex justify-content-between align-items-center mb-3">
                             <span class="text-muted">Your cart</span>
-                            <span class="badge badge-secondary badge-pill">{{cartSize}}</span>
+                            <span class="badge badge-light">{{cartsize}}</span>
                         </h4>
                         <ul class="list-group mb-3">
                             {% for item in cart %}
@@ -37,35 +37,16 @@
                                 </div>
                                 <span class="text-muted"><h6 class="my-0">Format: {{item.Format}} Price: ${{item.rate}}</h6></span>
                             </li>
-                            {% endfor %}
-                            <!---->
-                                
-                            <!--</li>-->
-                            <!--<li class="list-group-item d-flex justify-content-between lh-condensed">
-                                <div>-
-                                    <h6 class="my-0">Second product</h6>
-                                    <small class="text-muted">Brief description</small>
-                                </div>
-                                <span class="text-muted">$8</span>
-                            </li>
+                            {% endfor %} 
                             <li class="list-group-item d-flex justify-content-between lh-condensed">
                                 <div>
-                                    <h6 class="my-0">Third item</h6>
-                                    <small class="text-muted">Brief description</small>
+                                    <h6 class="my-0">Days of Rental: {{days}}</h6>
                                 </div>
-                                <span class="text-muted">$5</span>
+                                <span class="text-muted"><h6 class="my-0">Sub total: ${{total}}</h6></span> 
+                                <span class="text-muted"><h6 class="my-0">Tax: ${{tax}}</h6></span> 
+                                <span class="text-muted"><h6 class="my-0">Total: ${{grandtotal}}</h6></span> 
                             </li>
-                            <li class="list-group-item d-flex justify-content-between bg-light">
-                                <div class="text-success">
-                                    <h6 class="my-0">Promo code</h6>
-                                    <small>EXAMPLECODE</small>
-                                </div>
-                                <span class="text-success">-$5</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between">
-                                <span>Total (USD)</span>
-                                <strong>$20</strong>
-                            </li>--><!---->
+
                         </ul>
                         <form class="card p-2">
                             <div class="input-group">
