--- a/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/login.html
+++ b/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/MovieRental_CanjuraHylton/templates/login.html
@@ -12,18 +12,26 @@
 
 <h2>{{ message }}</h2>
 
-<form class="form-signin">
-    <h3 class="h3 mb-3 font-weight-normal">Please sign in</h3>
-    <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-        <label>
-            <input type="checkbox" value="remember-me"> Remember me
-        </label>
+    <div class="row">
+    {% if error %}
+    <div class="alert alert-warning" role="alert">
+        Incorrect username or password
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-</form>
+    {% endif %}
+    </div>
 
-{% endblock %}
+    <form class="form-signin">
+        <h3 class="h3 mb-3 font-weight-normal">Please sign in</h3>
+        <label for="inputUsername" class="sr-only">Username</label>
+        <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+
+    {% endblock %}
